--- a/src/Card.css
+++ b/src/Card.css
@@ -62,11 +62,22 @@
     /* border: 1px solid red; */
     padding: 15px;
 }
+.Form-input{
+    padding: 10px;
+}
 .Button{
     background-color: gray;
     border-radius: 5px;
     font: bold;
    margin: 40px;
+}
+.Preview-btn{
+    /* bottom: 100px; */
+    margin-top: 50%;
+    margin-right: 20px;
+    padding: 10px;
+    font-size: 25px;
+    
 }
 .NavBar-NavLink{
     padding: 100px;
