--- a/src/Card.css
+++ b/src/Card.css
@@ -1,6 +1,7 @@
 .Card-h1{
     color: blue;
    padding: 50px;
+   text-align: center;
 }
 .editor-container {
     display: flex;
@@ -8,7 +9,7 @@
     align-items: flex-start; /* align items at the top */
   }
 .Card-form-container{
-    /* position: absolute; */
+  
     border: 1px solid black;
     border-radius: 5px;
     background-color: lightgray;
@@ -26,29 +27,26 @@
     display: inline;
 }
 .heading-overlay-text{
-    /* color: blue; */
     position: absolute;
     top: 20%;
     left: 50%;
     transform: translate(-50%,-50%);
 }
 .Card-image{
-     /* position: absolute;  */
-    /* left: 100px;
-    top: 50px; */ 
+    
     padding: 50px;
     height: 600px;
     width: 500px;
     
 }
 .overlay-text {
-    /* color: white; */
+    
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     font-weight: bold;
-    /* text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7); makes text readable */
+    
 } 
 .Card-edit-form{
     display: flex;
@@ -59,7 +57,7 @@
     
 }
 .Form{
-    /* border: 1px solid red; */
+   
     padding: 15px;
 }
 .Form-input{
@@ -72,7 +70,7 @@
    margin: 40px;
 }
 .Preview-btn{
-    /* bottom: 100px; */
+  
     margin-top: 50%;
     margin-right: 20px;
     padding: 10px;
